--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "cssnano": "^4.1.7",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "html-webpack-reload-plugin": "^2.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.9.4",
